Add img alt text and adjust size

--- a/recipes/fried_rice.html
+++ b/recipes/fried_rice.html
@@ -10,6 +10,6 @@
     <h1>
         Fried Rice
     </h1>
-    <img src="https://www.australianeggs.org.au/assets/Uploads/Egg-fried-rice-2__ScaleWidthWzEyMDBd_ExtRewriteWyJqcGciLCJhdmlmIl0_QualityWzYwXQ.avif">
+    <img src="https://www.australianeggs.org.au/assets/Uploads/Egg-fried-rice-2__ScaleWidthWzEyMDBd_ExtRewriteWyJqcGciLCJhdmlmIl0_QualityWzYwXQ.avif" height="300" alt="a yummy looking cooked fried rice">
 </body>
 </html>
