--- a/recipes/porkchop.html
+++ b/recipes/porkchop.html
@@ -10,6 +10,6 @@
     <h1>
         Porkchop
     </h1>
-    <img src="https://kanamit.com.ph/cdn/shop/products/04-porkchop.jpg?v=1678151214">
+    <img src="https://kanamit.com.ph/cdn/shop/products/04-porkchop.jpg?v=1678151214" height="300" alt="perfectly juicy porkchop">
 </body>
 </html>
