--- a/recipes/sweetandspicy_beef.html
+++ b/recipes/sweetandspicy_beef.html
@@ -10,6 +10,6 @@
     <h1>
         Sweet and Spicy Beef
     </h1>
-    <img src="https://media.blueapron.com/culinary/recipe/49485/square_image/9d06c61e2ec5fb30621c2c94e6542dd7.jpg?format=pjpg&quality=80&width=1300">
+    <img src="https://media.blueapron.com/culinary/recipe/49485/square_image/9d06c61e2ec5fb30621c2c94e6542dd7.jpg?format=pjpg&quality=80&width=1300" height="300" alt="a sweet and spicy beef in a bowl tops with a lots of garnish">
 </body>
 </html>
