Fix description headings and paragraphs

--- a/recipes/fried_rice.html
+++ b/recipes/fried_rice.html
@@ -9,7 +9,8 @@
     <a href="../index.html">Home</a>
     <h1>Fried Rice</h1>
         <img src="https://www.australianeggs.org.au/assets/Uploads/Egg-fried-rice-2__ScaleWidthWzEyMDBd_ExtRewriteWyJqcGciLCJhdmlmIl0_QualityWzYwXQ.avif" height="300" alt="a yummy looking cooked fried rice">
-        <h4>This Fried Rice recipe is easy to make but taste like you want it everyday at your breakfast.</h4>
+        <h4>Desciption</h4>
+        <p>This Fried Rice recipe is easy to make but taste like you want it everyday at your breakfast.</p>
         <p>Fried rice is a versatile and popular dish made by stir-frying cooked rice in a wok or frying pan with various ingredients.</p>
 
 </body>
