--- a/recipes/sweetandspicy_beef.html
+++ b/recipes/sweetandspicy_beef.html
@@ -9,7 +9,8 @@
     <a href="../index.html">Home</a>
         <h1>Sweet and Spicy Beef</h1>
         <img src="https://media.blueapron.com/culinary/recipe/49485/square_image/9d06c61e2ec5fb30621c2c94e6542dd7.jpg?format=pjpg&quality=80&width=1300" height="300" alt="a sweet and spicy beef in a bowl tops with a lots of garnish">
-        <h4>This is a dish that is deeply savory, with a delightful interplay of sweet, salty, and spicy notes that linger on the palate.</h4>
+        <h4>Description</h4>
+        <p>This is a dish that is deeply savory, with a delightful interplay of sweet, salty, and spicy notes that linger on the palate.</p>
         <p>Sweet and spicy beef is a dish that masterfully balances two fundamental and contrasting flavor profiles: the deep, rich sweetness of ingredients like brown sugar, honey, or a sweet chili sauce, with the fiery kick of chili flakes, Sriracha, or other hot peppers.</p>
 </body>
 </html>
