Add Ingredients to every recipes

--- a/recipes/fried_rice.html
+++ b/recipes/fried_rice.html
@@ -12,6 +12,14 @@
         <h4>Desciption</h4>
         <p>This Fried Rice recipe is easy to make but taste like you want it everyday at your breakfast.</p>
         <p>Fried rice is a versatile and popular dish made by stir-frying cooked rice in a wok or frying pan with various ingredients.</p>
-
+        <h4>Ingredients</h4>
+            <ul>
+                <li>Rice</li>
+                <li>Oil</li>
+                <li>Eggs</li>
+                <li>Vegetables</li>
+                <li>Aromatics</li>
+                <li>Seasonings</li>
+            </ul>
 </body>
 </html>
