--- a/recipes/garlic_shrimp.html
+++ b/recipes/garlic_shrimp.html
@@ -12,5 +12,15 @@
         <h4>Description</h4>
         <p>As name suggested these shirmps are swimming together with garlics</p>
         <p>Garlic Shrimp is a popular dish that features shirmp cooked in a rich, aromatic sauce primarily composed of garlic and butter or olive oil.</p>
+        <h4>Ingredients</h4>
+            <ul>
+                <li>Shirmp</li>
+                <li>Garlic</li>
+                <li>Butter or Olive oil</li>
+                <li>Salt and Pepper</li>
+                <li>Parsley</li>
+                <li>Lemon</li>
+            </ul>
+
 </body>
 </html>
