--- a/recipes/porkchop.html
+++ b/recipes/porkchop.html
@@ -12,5 +12,13 @@
         <h4>Description</h4>
         <p>A specific slice/chop of pork from the loin of a pig</p>
         <p>Pork chops are a popular and versatile cut of meat, prized for their mild flavor and lean texture. They can be prepared in countless ways, and the cooking method often depends on the thickness of the chop.</p>
+        <h4>Ingredients</h4>
+            <ul>
+                <li>Porkchops</li>
+                <li>Oil</li>
+                <li>Salt</li>
+                <li>Black Pepper</li>
+            </ul>
+
 </body>
 </html>
