--- a/recipes/sweetandspicy_beef.html
+++ b/recipes/sweetandspicy_beef.html
@@ -12,5 +12,15 @@
         <h4>Description</h4>
         <p>This is a dish that is deeply savory, with a delightful interplay of sweet, salty, and spicy notes that linger on the palate.</p>
         <p>Sweet and spicy beef is a dish that masterfully balances two fundamental and contrasting flavor profiles: the deep, rich sweetness of ingredients like brown sugar, honey, or a sweet chili sauce, with the fiery kick of chili flakes, Sriracha, or other hot peppers.</p>
+        <h4>Ingredients</h4>
+            <ul>
+                <li>Beef</li>
+                <li>Soy Sauce</li>
+                <li>A Sweetener</li>
+                <li>A Spicy Element</li>
+                <li>Garlic and Ginger</li>
+                <li>Oil</li>
+            </ul>
+
 </body>
 </html>
