--- a/recipes/vegetable_soup.html
+++ b/recipes/vegetable_soup.html
@@ -12,5 +12,14 @@
         <h4>Description</h4>
         <p>Vegetable soup is a comforting and hearty dish consisting of a variety of vegetables.</p>
         <p>The foundation of the soup is typically a vegetable or chicken broth. This liquid is what carries and amplifies the flavors of all the ingredients. Some recipes may call for a tomato-based broth, while others are clear.</p>
+        <h4>Ingredients</h4>
+            <ul>
+                <li>Vegetables</li>
+                <li>Liquid Base</li>
+                <li>Aromatics</li>
+                <li>Seasonings</li>
+                <li>Oil</li>
+            </ul>
+
 </body>
 </html>
