Add Ingredients and Steps to Fried Rice recipe
Unordered list on Ingredients
Combination of Ordered list and Unordered list on Steps

--- a/recipes/fried_rice.html
+++ b/recipes/fried_rice.html
@@ -21,5 +21,55 @@
                 <li>Aromatics</li>
                 <li>Seasonings</li>
             </ul>
+        <h4>Steps</h4>
+            <ol>
+                <li>
+                    Prepare Your Ingredients:
+                        <ul>
+                            <li>Make sure you are using cold, day-old cooked rice.</li>
+                            <li>Whisk the eggs in a small bowl with a pinch of salt and pepper.</li>
+                            <li>Chop any fresh vegetables you're using, like onions or scallions.</li>
+                            <li>Chop any fresh vegetables you're using, like onions or scallions.</li>
+                        </ul>
+                </li>
+                <li>Cook the Eggs:
+                    <ul>
+                        <li>Heat a little oil in a wok or large skillet over high heat.</li>
+                        <li>Pour in the whisked eggs and quickly scramble them. Once cooked, remove them from the pan and set them aside.</li>
+                    </ul>
+                </li>
+                <li>
+                    Sauté the Aromatics and Vegetables:
+                    <ul>
+                        <li>Add a bit more oil to the hot pan.</li>
+                        <li>Add your diced onions or garlic and stir-fry for about 30 seconds until fragrant.</li>
+                        <li>Add any harder vegetables, like diced carrots, and cook for a minute or two. If using frozen peas and carrots, you can often add them a bit later.</li>
+                    </ul>
+                </li>
+                <li>
+                    Add the Rice:
+                    <ul>
+                        <li>Add the cold rice to the pan. Use your spatula to break up any clumps.</li>
+                        <li>Stir-fry the rice for several minutes, allowing it to heat through and slightly crisp up. The goal is to get each grain coated in the oil and separated.</li>
+                    </ul>
+                </li>
+                <li>
+                    Combine Everything and Season:
+                    <ul>
+                        <li>Add the cooked scrambled eggs and any other vegetables (like peas or corn) back to the pan.</li>
+                        <li>Pour in the soy sauce and continue to stir-fry everything together until the rice is evenly coated and has a consistent color.</li>
+                        <li>Taste and adjust seasoning if necessary. You can add a little more soy sauce or a dash of black pepper.</li>
+                        <li>If using, stir in a touch of toasted sesame oil right before serving.</li>
+                    </ul>
+                </li>
+                <li>
+                    Serve:
+                    <ul>
+                        <li>Garnish with the green parts of the scallions if you have them.</li>
+                        <li>Serve the fried rice hot, either on its own or as a side dish.</li>
+                    </ul>
+                </li>
+            </ol>
+
 </body>
 </html>
