Add Ingredients and Steps to Garlic Shirmp recipe
Unordered list on Ingredients
Combination of Ordered list and Unordered list on Steps

--- a/recipes/garlic_shrimp.html
+++ b/recipes/garlic_shrimp.html
@@ -21,6 +21,53 @@
                 <li>Parsley</li>
                 <li>Lemon</li>
             </ul>
+        <h4>Steps</h4>
+            <ol>
+                <li>
+                    Prepare Your Ingredients:
+                        <ul>
+                            <li>Thaw and pat the shrimp completely dry with a paper towel. This is crucial for a good sear.</li>
+                            <li>Mince or thinly slice a generous amount of fresh garlic.</li>
+                            <li>Chop your fresh parsley.</li>
+                            <li>Have your butter, olive oil, and lemon ready.</li>
+                        </ul>
+                </li>
+                <li>
+                    Season the Shrimp:
+                        <ul>
+                            <li>In a bowl, toss the shrimp with a pinch of salt and black pepper.</li>
+                        </ul>
+                </li>
+                <li>
+                    Sauté the Garlic:
+                        <ul>
+                            <li>Heat a large skillet or pan over medium-high heat.</li>
+                            <li>Add the olive oil and a tablespoon or two of butter.</li>
+                            <li>Once the butter is melted and the oil is shimmering, add the minced garlic. Sauté the garlic for about 30 seconds to a minute, just until it becomes fragrant. Be careful not to burn it, as burnt garlic turns bitter.</li>
+                         </ul>
+                </li>
+                <li>
+                    Cook the Shrimp:
+                        <ul>
+                            <li>Add the seasoned shrimp to the pan in a single layer.</li>
+                            <li>Cook for 1-2 minutes per side, until the shrimp turn pink and opaque. Shrimp cook very quickly, so be sure not to overcook them, or they will become tough.</li>
+                        </ul>
+                </li>
+                <li>
+                    Finish the Dish:
+                        <ul>
+                            <li>Turn off the heat.</li>
+                            <li>Squeeze fresh lemon juice over the shrimp and stir.</li>
+                            <li>Stir in the freshly chopped parsley.</li>
+                        </ul>
+                </li>
+                <li>
+                    Serve:
+                        <ul>
+                            <li>Serve the garlic shrimp immediately, while hot. The rich, garlicky butter sauce is perfect for dipping with crusty bread or serving over rice or pasta.</li>
+                        </ul>
+                </li>
+            </ol>
 
 </body>
 </html>
