Update Ingredients and Add Steps on Porkchop recipe
Ordered list on Steps

--- a/recipes/porkchop.html
+++ b/recipes/porkchop.html
@@ -15,10 +15,26 @@
         <h4>Ingredients</h4>
             <ul>
                 <li>Porkchops</li>
+                <li>Soy Sauce</li>
+                <li>Water</li>
+                <li>Red Onion</li>
+                <li>Lime or Calamansi</li>
+                <li>Salt and Pepper</li>
+                <li>White Sugar</li>
                 <li>Oil</li>
-                <li>Salt</li>
-                <li>Black Pepper</li>
             </ul>
+        <h4>Steps</h4>
+            <ol>
+                <li>Heat the oil in a pan.</li>
+                <li>Pan-fry both sides of the pork chop for 3 to 4 minutes or until medium brown.</li>
+                <li>Pour-in soy sauce and lime (or calamansi) juice.</li>   
+                <li>Add water and sugar. Let boil. Cover and simmer for 40 minutes or until the pork becomes tender. Note: add more water if needed.</li>
+                <li>Put-in the onions, salt (only if needed), and pepper. Cook for 8 more minute. Note: The dish should have some sauce in it when its done. Adding enough water in the middle of the process will help as long as you make sure that you control the amount.</li>
+                <li>Transfer to a serving bowl. Serve with rice.</li>
+                <li>Share and enjoy!</li>
+            </ol>
+
+
 
 </body>
 </html>
