Add Ingredients and Steps to Sweet and Spicy Beef recipe

--- a/recipes/sweetandspicy_beef.html
+++ b/recipes/sweetandspicy_beef.html
@@ -21,6 +21,44 @@
                 <li>Garlic and Ginger</li>
                 <li>Oil</li>
             </ul>
+        <h4>Steps</h4>
+            <ol>
+                <li>
+                    Prepare the Pork Chops:
+                        <ul>
+                            <li>Pat the pork chops dry thoroughly with paper towels. This helps them get a good sear.</li>
+                            <li>Season both sides generously with salt and black pepper.</li>
+                        </ul>
+                </li>
+                <li>
+                    Heat the Pan:
+                        <ul>
+                            <li>Place a large skillet or frying pan over medium-high heat.</li>
+                            <li>Add a tablespoon or two of cooking oil to the hot pan. You want the oil to be shimmering but not smoking.</li>
+                        </ul>
+                </li>
+                <li>
+                    Sear the Pork Chops:
+                        <ul>
+                            <li>Carefully place the seasoned pork chops in the hot pan. Do not overcrowd the pan; cook in batches if necessary.</li>
+                            <li>Sear for 3-5 minutes per side, depending on the thickness of your chops, until a golden-brown crust forms.</li>
+                            <li>For thicker chops (1 inch or more), you might want to reduce the heat to medium after searing both sides and continue cooking for a few more minutes, flipping occasionally, until the internal temperature reaches 145 Fahrenheit</li>
+                        </ul>
+                </li>
+                <li>
+                    Rest the Pork Chops:
+                        <ul>
+                            <li>Once cooked, remove the pork chops from the pan and place them on a plate or cutting board.</li>
+                            <li>Allow them to rest for at least 3-5 minutes before serving. This allows the juices to redistribute throughout the meat, resulting in a more tender and juicy chop.</li>
+                        </ul>
+                </li>
+                <li>
+                    Serve:
+                        <ul>
+                            <li>Serve the pork chops hot.</li>
+                        </ul>
+                </li>
+            </ol>
 
 </body>
 </html>
