--- a/recipes/vegetable_soup.html
+++ b/recipes/vegetable_soup.html
@@ -20,6 +20,44 @@
                 <li>Seasonings</li>
                 <li>Oil</li>
             </ul>
-
+        <h4>Steps</h4>
+            <ol>
+                <li>
+                    Prepare Your Vegetables:
+                        <ul>
+                            <li>Wash and chop all your chosen vegetables (carrots, celery, onions, potatoes, etc.) into bite-sized pieces. Mince the garlic.</li>
+                        </ul>
+                </li>
+                <li>
+                    Sauté Aromatics:
+                        <ul>
+                            <li>Heat a large pot or Dutch oven over medium heat.</li>
+                            <li>Add a small amount of cooking oil (like olive oil).</li>
+                            <li>Add the chopped onions and celery to the pot and sauté for 5-7 minutes until they soften and become translucent.</li>
+                            <li>Add the minced garlic and cook for another minute until fragrant, being careful not to burn it.</li>
+                        </ul>
+                </li>
+                <li>
+                    Add Remaining Vegetables and Broth:
+                        <ul>
+                            <li>Add the chopped carrots and potatoes to the pot and stir for a couple of minutes.</li>
+                            <li>Pour in the vegetable or chicken broth. Make sure the liquid covers all the vegetables.</li>
+                        </ul>
+                </li>
+                <li>
+                    Simmer the Soup:
+                        <ul>
+                            <li>Bring the soup to a boil over medium-high heat.</li>
+                            <li>Once boiling, reduce the heat to low, cover the pot, and let it simmer for 15-20 minutes, or until all the vegetables are tender when pierced with a fork.</li>
+                        </ul>
+                </li>
+                <li>
+                    Season and Serve:
+                        <ul>
+                            <li>Taste the soup and season with salt and black pepper to your liking.</li>
+                            <li>Serve hot, optionally garnished with fresh herbs if you have them.</li>
+                        </ul>
+                </li>
+            </ol>
 </body>
 </html>
