Add unordered list tag to each recipes

--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
     <h1>
         Odin Recipes
     </h1>
-    <a href="recipes/fried_rice.html">Fried Rice</a>
-    <a href="recipes/garlic_shrimp.html">Garlic Shirmp</a>
-    <a href="recipes/porkchop.html">Porkchop</a>
-    <a href="recipes/sweetandspicy_beef.html">Sweet and Spicy Beef</a>
-    <a href="recipes/vegetable_soup.html">Vegetables Soup</a>
+    <ul>
+        <li><a href="recipes/fried_rice.html">Fried Rice</a></li>
+        <li><a href="recipes/garlic_shrimp.html">Garlic Shirmp</a></li>
+        <li><a href="recipes/porkchop.html">Porkchop</a></li>
+        <li><a href="recipes/sweetandspicy_beef.html">Sweet and Spicy Beef</a></li>
+        <li><a href="recipes/vegetable_soup.html">Vegetables Soup</a></li>
+    </ul>
 </body>
 </html>
