--- a/index.html
+++ b/index.html
@@ -7,15 +7,17 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <h1>
-        Odin Recipes
-    </h1>
-    <ul>
-        <li><a href="recipes/fried_rice.html">Fried Rice</a></li>
-        <li><a href="recipes/garlic_shrimp.html">Garlic Shirmp</a></li>
-        <li><a href="recipes/porkchop.html">Porkchop</a></li>
-        <li><a href="recipes/sweetandspicy_beef.html">Sweet and Spicy Beef</a></li>
-        <li><a href="recipes/vegetable_soup.html">Vegetables Soup</a></li>
-    </ul>
+    <div class="background">
+        <h1>
+            Odin Recipes
+        </h1>
+    </div>
+        <ul>
+            <li class="friedrice"><a href="recipes/fried_rice.html">Fried Rice</a></li>
+            <li><a href="recipes/garlic_shrimp.html">Garlic Shirmp</a></li>
+            <li><a href="recipes/porkchop.html">Porkchop</a></li>
+            <li><a href="recipes/sweetandspicy_beef.html">Sweet and Spicy Beef</a></li>
+            <li><a href="recipes/vegetable_soup.html">Vegetables Soup</a></li>
+        </ul>
 </body>
 </html>
