--- a/index.html
+++ b/index.html
@@ -12,12 +12,32 @@
             Odin Recipes
         </h1>
     </div>
-        <ul>
-            <li class="friedrice"><a href="recipes/fried_rice.html">Fried Rice</a></li>
-            <li><a href="recipes/garlic_shrimp.html">Garlic Shirmp</a></li>
-            <li><a href="recipes/porkchop.html">Porkchop</a></li>
-            <li><a href="recipes/sweetandspicy_beef.html">Sweet and Spicy Beef</a></li>
-            <li><a href="recipes/vegetable_soup.html">Vegetables Soup</a></li>
-        </ul>
+    <div class="recipe-list">
+        <div class="recipe-1">
+            <div>
+                <a href="recipes/fried_rice.html">Fried Rice</a>
+            </div>
+        </div>
+        <div class="recipe-2">
+            <div>
+                <a href="recipes/garlic_shrimp.html">Garlic Shirmp</a>
+            </div>
+        </div>
+        <div class="recipe-3">
+            <div>
+                <a href="recipes/porkchop.html">Porkchop</a>
+            </div>
+        </div>
+        <div class="recipe-4">
+            <div>
+                <a href="recipes/sweetandspicy_beef.html">Sweet and Spicy Beef</a>
+            </div>
+        </div>
+        <div class="recipe-5">
+            <div>
+                <a href="recipes/vegetable_soup.html">Vegetables Soup</a>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
