--- a/recipes/fried_rice.html
+++ b/recipes/fried_rice.html
@@ -4,72 +4,86 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../index.css">
 </head>
 <body>
-    <a href="../index.html">Home</a>
-    <h1>Fried Rice</h1>
-        <img src="https://www.australianeggs.org.au/assets/Uploads/Egg-fried-rice-2__ScaleWidthWzEyMDBd_ExtRewriteWyJqcGciLCJhdmlmIl0_QualityWzYwXQ.avif" height="300" alt="a yummy looking cooked fried rice">
-        <h4>Desciption</h4>
-        <p>This Fried Rice recipe is easy to make but taste like you want it everyday at your breakfast.</p>
-        <p>Fried rice is a versatile and popular dish made by stir-frying cooked rice in a wok or frying pan with various ingredients.</p>
-        <h4>Ingredients</h4>
-            <ul>
-                <li>Rice</li>
-                <li>Oil</li>
-                <li>Eggs</li>
-                <li>Vegetables</li>
-                <li>Aromatics</li>
-                <li>Seasonings</li>
-            </ul>
-        <h4>Steps</h4>
-            <ol>
-                <li>
-                    Prepare Your Ingredients:
+    <div class="recipeCard">
+        <div class="homepage">
+            <button><a href="../index.html">Home</a></button>
+        </div>
+        <div>
+            <h1>Fried Rice</h1>
+            <div class="riceImage">
+                <img src="https://www.australianeggs.org.au/assets/Uploads/Egg-fried-rice-2__ScaleWidthWzEyMDBd_ExtRewriteWyJqcGciLCJhdmlmIl0_QualityWzYwXQ.avif" height="300" alt="a yummy looking cooked fried rice">
+            </div>
+        </div>
+        <div class="info">
+            <div>
+                <h4>Desciption</h4>
+                    <p>This Fried Rice recipe is easy to make but taste like you want it everyday at your breakfast.</p>
+                    <p>Fried rice is a versatile and popular dish made by stir-frying cooked rice in a wok or frying pan with various ingredients.</p>
+            </div>
+            <div class="ingredients">
+                <h4>Ingredients</h4>
+                    <ul>
+                        <li>Rice</li>
+                        <li>Oil</li>
+                        <li>Eggs</li>
+                        <li>Vegetables</li>
+                        <li>Aromatics</li>
+                        <li>Seasonings</li>
+                    </ul>
+            </div>
+                <h4>Steps</h4>
+                    <ol>
+                        <li>
+                            Prepare Your Ingredients:
+                                <ul>
+                                    <li>Make sure you are using cold, day-old cooked rice.</li>
+                                    <li>Whisk the eggs in a small bowl with a pinch of salt and pepper.</li>
+                                    <li>Chop any fresh vegetables you're using, like onions or scallions.</li>
+                                    <li>Chop any fresh vegetables you're using, like onions or scallions.</li>
+                                </ul>
+                    </li>
+                    <li>Cook the Eggs:
                         <ul>
-                            <li>Make sure you are using cold, day-old cooked rice.</li>
-                            <li>Whisk the eggs in a small bowl with a pinch of salt and pepper.</li>
-                            <li>Chop any fresh vegetables you're using, like onions or scallions.</li>
-                            <li>Chop any fresh vegetables you're using, like onions or scallions.</li>
+                            <li>Heat a little oil in a wok or large skillet over high heat.</li>
+                            <li>Pour in the whisked eggs and quickly scramble them. Once cooked, remove them from the pan and set them aside.</li>
                         </ul>
-                </li>
-                <li>Cook the Eggs:
-                    <ul>
-                        <li>Heat a little oil in a wok or large skillet over high heat.</li>
-                        <li>Pour in the whisked eggs and quickly scramble them. Once cooked, remove them from the pan and set them aside.</li>
-                    </ul>
-                </li>
-                <li>
-                    Sauté the Aromatics and Vegetables:
-                    <ul>
-                        <li>Add a bit more oil to the hot pan.</li>
-                        <li>Add your diced onions or garlic and stir-fry for about 30 seconds until fragrant.</li>
-                        <li>Add any harder vegetables, like diced carrots, and cook for a minute or two. If using frozen peas and carrots, you can often add them a bit later.</li>
-                    </ul>
-                </li>
-                <li>
-                    Add the Rice:
-                    <ul>
-                        <li>Add the cold rice to the pan. Use your spatula to break up any clumps.</li>
-                        <li>Stir-fry the rice for several minutes, allowing it to heat through and slightly crisp up. The goal is to get each grain coated in the oil and separated.</li>
-                    </ul>
-                </li>
-                <li>
-                    Combine Everything and Season:
-                    <ul>
-                        <li>Add the cooked scrambled eggs and any other vegetables (like peas or corn) back to the pan.</li>
-                        <li>Pour in the soy sauce and continue to stir-fry everything together until the rice is evenly coated and has a consistent color.</li>
-                        <li>Taste and adjust seasoning if necessary. You can add a little more soy sauce or a dash of black pepper.</li>
-                        <li>If using, stir in a touch of toasted sesame oil right before serving.</li>
-                    </ul>
-                </li>
-                <li>
-                    Serve:
-                    <ul>
-                        <li>Garnish with the green parts of the scallions if you have them.</li>
-                        <li>Serve the fried rice hot, either on its own or as a side dish.</li>
-                    </ul>
-                </li>
-            </ol>
-
+                    </li>
+                    <li>
+                        Sauté the Aromatics and Vegetables:
+                        <ul>
+                            <li>Add a bit more oil to the hot pan.</li>
+                            <li>Add your diced onions or garlic and stir-fry for about 30 seconds until fragrant.</li>
+                            <li>Add any harder vegetables, like diced carrots, and cook for a minute or two. If using frozen peas and carrots, you can often add them a bit later.</li>
+                        </ul>
+                    </li>
+                    <li>
+                        Add the Rice:
+                        <ul>
+                            <li>Add the cold rice to the pan. Use your spatula to break up any clumps.</li>
+                            <li>Stir-fry the rice for several minutes, allowing it to heat through and slightly crisp up. The goal is to get each grain coated in the oil and separated.</li>
+                        </ul>
+                    </li>
+                    <li>
+                        Combine Everything and Season:
+                        <ul>
+                            <li>Add the cooked scrambled eggs and any other vegetables (like peas or corn) back to the pan.</li>
+                            <li>Pour in the soy sauce and continue to stir-fry everything together until the rice is evenly coated and has a consistent color.</li>
+                            <li>Taste and adjust seasoning if necessary. You can add a little more soy sauce or a dash of black pepper.</li>
+                            <li>If using, stir in a touch of toasted sesame oil right before serving.</li>
+                        </ul>
+                    </li>
+                    <li>
+                        Serve:
+                        <ul>
+                            <li>Garnish with the green parts of the scallions if you have them.</li>
+                            <li>Serve the fried rice hot, either on its own or as a side dish.</li>
+                        </ul>
+                    </li>
+                </ol>
+        </div>        
+    </div>
 </body>
 </html>
