Add styles to Recipes
updated class selector riceImage to recipeImage to generalized the selector for all recipes.
Add <div> tags and class selectors and link all pages to index.css

--- a/recipes/fried_rice.html
+++ b/recipes/fried_rice.html
@@ -13,7 +13,7 @@
         </div>
         <div>
             <h1>Fried Rice</h1>
-            <div class="riceImage">
+            <div class="recipeImage">
                 <img src="https://www.australianeggs.org.au/assets/Uploads/Egg-fried-rice-2__ScaleWidthWzEyMDBd_ExtRewriteWyJqcGciLCJhdmlmIl0_QualityWzYwXQ.avif" height="300" alt="a yummy looking cooked fried rice">
             </div>
         </div>
