--- a/recipes/porkchop.html
+++ b/recipes/porkchop.html
@@ -4,36 +4,50 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../index.css">
 </head>
 <body>
-    <a href="../index.html">Home</a>
-        <h1>Porkchop</h1>
-        <img src="https://kanamit.com.ph/cdn/shop/products/04-porkchop.jpg?v=1678151214" height="300" alt="perfectly juicy porkchop">
-        <h4>Description</h4>
-        <p>A specific slice/chop of pork from the loin of a pig</p>
-        <p>Pork chops are a popular and versatile cut of meat, prized for their mild flavor and lean texture. They can be prepared in countless ways, and the cooking method often depends on the thickness of the chop.</p>
-        <h4>Ingredients</h4>
-            <ul>
-                <li>Porkchops</li>
-                <li>Soy Sauce</li>
-                <li>Water</li>
-                <li>Red Onion</li>
-                <li>Lime or Calamansi</li>
-                <li>Salt and Pepper</li>
-                <li>White Sugar</li>
-                <li>Oil</li>
-            </ul>
-        <h4>Steps</h4>
-            <ol>
-                <li>Heat the oil in a pan.</li>
-                <li>Pan-fry both sides of the pork chop for 3 to 4 minutes or until medium brown.</li>
-                <li>Pour-in soy sauce and lime (or calamansi) juice.</li>   
-                <li>Add water and sugar. Let boil. Cover and simmer for 40 minutes or until the pork becomes tender. Note: add more water if needed.</li>
-                <li>Put-in the onions, salt (only if needed), and pepper. Cook for 8 more minute. Note: The dish should have some sauce in it when its done. Adding enough water in the middle of the process will help as long as you make sure that you control the amount.</li>
-                <li>Transfer to a serving bowl. Serve with rice.</li>
-                <li>Share and enjoy!</li>
-            </ol>
-
+    <div class="recipeCard">
+        <div class="homepage">
+            <button><a href="../index.html">Home</a></button>
+        </div>
+        <div>
+            <h1>Porkchop</h1>
+            <div class="recipeImage">
+                <img src="https://kanamit.com.ph/cdn/shop/products/04-porkchop.jpg?v=1678151214" height="300" alt="perfectly juicy porkchop">
+            </div>
+        </div>
+        <div class="info"> 
+            <div>   
+                <h4>Description</h4>
+                    <p>A specific slice/chop of pork from the loin of a pig</p>
+                    <p>Pork chops are a popular and versatile cut of meat, prized for their mild flavor and lean texture. They can be prepared in countless ways, and the cooking method often depends on the thickness of the chop.</p>
+            </div>
+            <div class="ingredients">
+                <h4>Ingredients</h4>
+                    <ul>
+                        <li>Porkchops</li>
+                        <li>Soy Sauce</li>
+                        <li>Water</li>
+                        <li>Red Onion</li>
+                        <li>Lime or Calamansi</li>
+                        <li>Salt and Pepper</li>
+                        <li>White Sugar</li>
+                        <li>Oil</li>
+                    </ul>
+            </div>
+            <h4>Steps</h4>
+                <ol>
+                    <li>Heat the oil in a pan.</li>
+                    <li>Pan-fry both sides of the pork chop for 3 to 4 minutes or until medium brown.</li>
+                    <li>Pour-in soy sauce and lime (or calamansi) juice.</li>   
+                    <li>Add water and sugar. Let boil. Cover and simmer for 40 minutes or until the pork becomes tender. Note: add more water if needed.</li>
+                    <li>Put-in the onions, salt (only if needed), and pepper. Cook for 8 more minute. Note: The dish should have some sauce in it when its done. Adding enough water in the middle of the process will help as long as you make sure that you control the amount.</li>
+                    <li>Transfer to a serving bowl. Serve with rice.</li>
+                    <li>Share and enjoy!</li>
+                </ol>
+        </div>
+    </div>
 
 
 </body>
