--- a/recipes/sweetandspicy_beef.html
+++ b/recipes/sweetandspicy_beef.html
@@ -4,61 +4,76 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../index.css">
 </head>
 <body>
-    <a href="../index.html">Home</a>
-        <h1>Sweet and Spicy Beef</h1>
-        <img src="https://media.blueapron.com/culinary/recipe/49485/square_image/9d06c61e2ec5fb30621c2c94e6542dd7.jpg?format=pjpg&quality=80&width=1300" height="300" alt="a sweet and spicy beef in a bowl tops with a lots of garnish">
-        <h4>Description</h4>
-        <p>This is a dish that is deeply savory, with a delightful interplay of sweet, salty, and spicy notes that linger on the palate.</p>
-        <p>Sweet and spicy beef is a dish that masterfully balances two fundamental and contrasting flavor profiles: the deep, rich sweetness of ingredients like brown sugar, honey, or a sweet chili sauce, with the fiery kick of chili flakes, Sriracha, or other hot peppers.</p>
-        <h4>Ingredients</h4>
-            <ul>
-                <li>Beef</li>
-                <li>Soy Sauce</li>
-                <li>A Sweetener</li>
-                <li>A Spicy Element</li>
-                <li>Garlic and Ginger</li>
-                <li>Oil</li>
-            </ul>
-        <h4>Steps</h4>
-            <ol>
-                <li>
-                    Prepare the Pork Chops:
-                        <ul>
-                            <li>Pat the pork chops dry thoroughly with paper towels. This helps them get a good sear.</li>
-                            <li>Season both sides generously with salt and black pepper.</li>
-                        </ul>
-                </li>
-                <li>
-                    Heat the Pan:
-                        <ul>
-                            <li>Place a large skillet or frying pan over medium-high heat.</li>
-                            <li>Add a tablespoon or two of cooking oil to the hot pan. You want the oil to be shimmering but not smoking.</li>
-                        </ul>
-                </li>
-                <li>
-                    Sear the Pork Chops:
-                        <ul>
-                            <li>Carefully place the seasoned pork chops in the hot pan. Do not overcrowd the pan; cook in batches if necessary.</li>
-                            <li>Sear for 3-5 minutes per side, depending on the thickness of your chops, until a golden-brown crust forms.</li>
-                            <li>For thicker chops (1 inch or more), you might want to reduce the heat to medium after searing both sides and continue cooking for a few more minutes, flipping occasionally, until the internal temperature reaches 145 Fahrenheit</li>
-                        </ul>
-                </li>
-                <li>
-                    Rest the Pork Chops:
-                        <ul>
-                            <li>Once cooked, remove the pork chops from the pan and place them on a plate or cutting board.</li>
-                            <li>Allow them to rest for at least 3-5 minutes before serving. This allows the juices to redistribute throughout the meat, resulting in a more tender and juicy chop.</li>
-                        </ul>
-                </li>
-                <li>
-                    Serve:
-                        <ul>
-                            <li>Serve the pork chops hot.</li>
-                        </ul>
-                </li>
-            </ol>
+    <div class="recipeCard">
+        <div class="homepage">
+            <button><a href="../index.html">Home</a></button>
+        </div>
+        <div>
+            <h1>Sweet and Spicy Beef</h1>
+            <div class="recipeImage">
+                <img src="https://media.blueapron.com/culinary/recipe/49485/square_image/9d06c61e2ec5fb30621c2c94e6542dd7.jpg?format=pjpg&quality=80&width=1300" height="300" alt="a sweet and spicy beef in a bowl tops with a lots of garnish">
+            </div>
+        </div>
+        <div class="info"> 
+            <div>   
+                <h4>Description</h4>
+                    <p>This is a dish that is deeply savory, with a delightful interplay of sweet, salty, and spicy notes that linger on the palate.</p>
+                    <p>Sweet and spicy beef is a dish that masterfully balances two fundamental and contrasting flavor profiles: the deep, rich sweetness of ingredients like brown sugar, honey, or a sweet chili sauce, with the fiery kick of chili flakes, Sriracha, or other hot peppers.</p>
+            </div>
+            <div class="ingredients">
+                <h4>Ingredients</h4>
+                    <ul>
+                        <li>Beef</li>
+                        <li>Soy Sauce</li>
+                        <li>A Sweetener</li>
+                        <li>A Spicy Element</li>
+                        <li>Garlic and Ginger</li>
+                        <li>Oil</li>
+                    </ul>
+            </div>
+            <h4>Steps</h4>
+                <ol>
+                    <li>
+                        Prepare the Pork Chops:
+                            <ul>
+                                <li>Pat the pork chops dry thoroughly with paper towels. This helps them get a good sear.</li>
+                                <li>Season both sides generously with salt and black pepper.</li>
+                            </ul>
+                    </li>
+                    <li>
+                        Heat the Pan:
+                            <ul>
+                                <li>Place a large skillet or frying pan over medium-high heat.</li>
+                                <li>Add a tablespoon or two of cooking oil to the hot pan. You want the oil to be shimmering but not smoking.</li>
+                            </ul>
+                    </li>
+                    <li>
+                        Sear the Pork Chops:
+                            <ul>
+                                <li>Carefully place the seasoned pork chops in the hot pan. Do not overcrowd the pan; cook in batches if necessary.</li>
+                                <li>Sear for 3-5 minutes per side, depending on the thickness of your chops, until a golden-brown crust forms.</li>
+                                <li>For thicker chops (1 inch or more), you might want to reduce the heat to medium after searing both sides and continue cooking for a few more minutes, flipping occasionally, until the internal temperature reaches 145 Fahrenheit</li>
+                            </ul>
+                    </li>
+                    <li>
+                        Rest the Pork Chops:
+                            <ul>
+                                <li>Once cooked, remove the pork chops from the pan and place them on a plate or cutting board.</li>
+                                <li>Allow them to rest for at least 3-5 minutes before serving. This allows the juices to redistribute throughout the meat, resulting in a more tender and juicy chop.</li>
+                            </ul>
+                    </li>
+                    <li>
+                        Serve:
+                            <ul>
+                                <li>Serve the pork chops hot.</li>
+                            </ul>
+                    </li>
+                </ol>
+        </div>
+    </div>
 
 </body>
 </html>
