Add previous button to all recipe

--- a/recipes/fried_rice.html
+++ b/recipes/fried_rice.html
@@ -11,6 +11,9 @@
         <div class="homepage">
             <button><a href="../index.html">Home</a></button>
         </div>
+        <div class="next">
+            <button><a href="./garlic_shrimp.html">Next</a></button>
+        </div>
         <div>
             <h1>Fried Rice</h1>
             <div class="recipeImage">
