--- a/recipes/porkchop.html
+++ b/recipes/porkchop.html
@@ -11,6 +11,12 @@
         <div class="homepage">
             <button><a href="../index.html">Home</a></button>
         </div>
+        <div class="next">
+            <button><a href="./sweetandspicy_beef.html">Next</a></button>
+        </div>
+        <div class="previous">
+            <button><a href="./garlic_shrimp.html">Previous</a></button>
+        </div>
         <div>
             <h1>Porkchop</h1>
             <div class="recipeImage">
