--- a/recipes/garlic_shrimp.html
+++ b/recipes/garlic_shrimp.html
@@ -11,6 +11,12 @@
         <div class="homepage">
             <button><a href="../index.html">Home</a></button>
         </div>
+        <div class="next">
+            <button><a href="./porkchop.html">Next</a></button>
+        </div>
+        <div class="previous">
+            <button><a href="./fried_rice.html">Previous</a></button>
+        </div>
         <div>
             <h1>Garlic Shrimp</h1>
             <div class="recipeImage">
